force-app/main/default/objects/H8_Flow_Form_Section__mdt/H8_Flow_Form_Section__mdt.object-meta.xml
<CustomObject>
    <description>This is used to determine which flow is rendered, the name of the section determine and icon for the section and the order</description>
    <label>H8 Flow Form Section</label>
    <pluralLabel>H8 Flow Form Sections</pluralLabel>
</CustomObject>