force-app/main/default/objects/H8_Flow_Form_Section__mdt/fields/Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_API_Name__c</fullName>
    <inlineHelpText>This is the API Name for the flow that you want to render</inlineHelpText>
    <label>Flow API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>