force-app/main/default/objects/H8_Flow_Form_Section__mdt/fields/H8_Flow_Form__c.field-meta.xml
<CustomField>
    <fullName>H8_Flow_Form__c</fullName>
    <inlineHelpText>This is the flow form that the section is linked to</inlineHelpText>
    <label>H8 Flow Form</label>
    <referenceTo>H8_Flow_Form__mdt</referenceTo>
    <relationshipLabel>H8 Flow Form Sections</relationshipLabel>
    <relationshipName>H8_Flow_Form_Sections</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>