force-app/main/default/objects/H8_Flow_Form_Section__mdt/fields/Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Icon_Name__c</fullName>
    <inlineHelpText>Use SLDS Icons here with the format standard:opportunity</inlineHelpText>
    <label>Icon Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>