force-app/main/default/objects/H8_Flow_Form_Section__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>This is the order that the section should appear in</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>