force-app/main/default/objects/H8_Flow_Form_Section__mdt/fields/Use_Custom_Label__c.field-meta.xml
<CustomField>
    <fullName>Use_Custom_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When you tick this box you can set the name of section as a custom label - you do not need to include $Label. just the Label API Name will be enough</inlineHelpText>
    <label>Use Custom Label</label>
    <type>Checkbox</type>
</CustomField>